tests/baselines/reference/classInheritence.errors.txt
tests/cases/compiler/classInheritence.ts(1,17): error TS2690: A class must be declared after its base class.
tests/cases/compiler/classInheritence.ts(2,7): error TS2506: 'A' is referenced directly or indirectly in its own base expression.


==== tests/cases/compiler/classInheritence.ts (2 errors) ====
    class B extends A { }
                    ~
!!! error TS2690: A class must be declared after its base class.
    class A extends A { }
          ~
!!! error TS2506: 'A' is referenced directly or indirectly in its own base expression.